Fix file copying in release workflow and add Google Apps Script for WebHookARM

--- a/.github/workflows/package-plugin.yml
+++ b/.github/workflows/package-plugin.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Prepare plugin folder
         run: |
           mkdir webhookarm
-          cp -r webhookarm.php readme.txt release.sh assets includes webhookarm/
+          cp -r *.php readme.txt assets LICENSE webhookarm/
 
       - name: Zip it
         run: zip -r webhookarm.zip webhookarm
